[package]
name = "libh3"
version = "0.2.3-beta.2"
authors = ["Rusty Conover <rusty@conover.me>", "Ricky <ricky85ps@web.de>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ricky85ps/libh3.git"
description = "Safe Rust Bindings to Uber's Hexagonal Hierarchical Spatial Index - H3"

[build-dependencies]
bindgen = { version = "0.72.1" }
build-print = { version = "1.0.1" }
cmake = { version = "0.1.54", optional = true }
flate2 = { version = "1.1.1", optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
sha2 = { version = "0.10.8", optional = true }
tar = { version = "0.4.44", optional = true }
toml = { version = "0.9.8", optional = true }

[dependencies]
static_assertions = "1.1.0"

[package.metadata.docs.rs]
no-default-features = true


[package.metadata.h3-sources]
targz_url = "https://github.com/uber/h3/archive/refs/tags/v4.3.0.tar.gz"
targz_sha512sum = "6ed93c5e69adbba9804282b5814f1617d4c930b677df4735e4d4cf10fcba813f61b6be3a125d191d375e52e3e22af7c244efb007f27ca487b34eae9e24fb6c7b"
targz_root_dir = "h3-4.3.0"

[features]
default = ["uber_h3_from_scratch"]
uber_h3_from_scratch = [
    "dep:cmake",
    "dep:flate2",
    "dep:hex",
    "dep:reqwest",
    "dep:sha2",
    "dep:tar",
    "dep:toml",
]
