[package]
name = "libh3"
version = "0.2.4"
authors = ["Rusty Conover <rusty@conover.me>", "Ricky <ricky85ps@web.de>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/ricky85ps/libh3.git"
description = "Safe Rust Bindings to Uber's Hexagonal Hierarchical Spatial Index - H3"

[build-dependencies]
bindgen = { version = "0.72.1" }
cmake = { version = "0.1.54", optional = true }
flate2 = { version = "1.1.1", optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.13.2", features = ["blocking"], optional = true }
sha2 = { version = "0.11.0", optional = true }
tar = { version = "0.4.44", optional = true }
toml = { version = "1.1.2+spec-1.1.0", optional = true }

[dependencies]
static_assertions = "1.1.0"

[package.metadata.h3-sources]
targz_url = "https://github.com/uber/h3/archive/refs/tags/v4.4.1.tar.gz"
targz_sha512sum = "e8a87c109ba917887483c73b0410bfd11f9259815ba7f9b967779963c9a7a5c208d70f0d6f6ae586ff371feeab3e19d96273137b42fd03a84ae08965bb8ea643"
targz_root_dir = "h3-4.4.1"

[features]
default = ["uber_h3_from_scratch"]
uber_h3_from_scratch = [
    "dep:cmake",
    "dep:flate2",
    "dep:hex",
    "dep:reqwest",
    "dep:sha2",
    "dep:tar",
    "dep:toml",
]
